--- a/Godot/export_presets.cfg
+++ b/Godot/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Build/SpeedRacer.exe"
+export_path="../../SpeedRacerBuild/SpeedRacer.exe"
 script_export_mode=1
 script_encryption_key=""
 
